force-app/main/default/objects/Referral_Conversion__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Direct</fullName><default>true</default><label
        >Direct</label></value>
            <value><fullName>LinkedIn</fullName><default>false</default><label
        >LinkedIn</label></value>
            <value><fullName>WhatsApp</fullName><default>false</default><label
        >WhatsApp</label></value>
            <value><fullName>Email</fullName><default>false</default><label
        >Email</label></value>
            <value><fullName>Facebook</fullName><default>false</default><label
        >Facebook</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>