force-app/main/default/objects/Referral_Conversion__c/fields/Conversion_Status__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Status__c</fullName>
    <label>Conversion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Interviewed</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>