force-app/main/default/objects/Referral_Conversion__c/fields/Referred_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Referred_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Referred Candidates</relationshipLabel>
    <relationshipName>ReferredCandidate</relationshipName>
    <type>Lookup</type>
</CustomField>