force-app/main/default/objects/Referral_Conversion__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Referral Conversions</relationshipLabel>
    <relationshipName>ReferralConversions</relationshipName>
    <type>Lookup</type>
</CustomField>