force-app/main/default/objects/Referral_Conversion__c/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Reward Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>